Rename (currently unused) QUIC v41 to v42 in preparation for fixing v40 in a new v41.

Merge internal change: 169577711

Bug: 766928
Change-Id: Iecb17bdfb604b7e730faa679f29a5b259dba8530
Reviewed-on: https://chromium-review.googlesource.com/676759
Reviewed-by: Bryan McQuade <bmcquade@chromium.org>
Reviewed-by: Randy Smith <rdsmith@chromium.org>
Reviewed-by: Jana Iyengar <jri@chromium.org>
Reviewed-by: Ryan Hamilton <rch@chromium.org>
Commit-Queue: Ryan Hamilton <rch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503783}
Former-commit-id: 2a40d33829f7faabaee72f128194cb2cb3ebf5b7