chrome/browser/page_load_metrics/observers/protocol_page_load_metrics_observer.cc
@@ -63,6 +63,7 @@ void ProtocolPageLoadMetricsObserver::OnParseStart(
     case net::HttpResponseInfo::CONNECTION_INFO_QUIC_39:
     case net::HttpResponseInfo::CONNECTION_INFO_QUIC_40:
     case net::HttpResponseInfo::CONNECTION_INFO_QUIC_41:
+    case net::HttpResponseInfo::CONNECTION_INFO_QUIC_42:
       PAGE_LOAD_HISTOGRAM(
           "PageLoad.Clients.Protocol.QUIC.ParseTiming.NavigationToParseStart",
           timing.parse_timing->parse_start.value());
@@ -116,6 +117,7 @@ void ProtocolPageLoadMetricsObserver::OnFirstContentfulPaintInPage(
     case net::HttpResponseInfo::CONNECTION_INFO_QUIC_39:
     case net::HttpResponseInfo::CONNECTION_INFO_QUIC_40:
     case net::HttpResponseInfo::CONNECTION_INFO_QUIC_41:
+    case net::HttpResponseInfo::CONNECTION_INFO_QUIC_42:
       PAGE_LOAD_HISTOGRAM(
           "PageLoad.Clients.Protocol.QUIC.PaintTiming."
           "NavigationToFirstContentfulPaint",
@@ -175,6 +177,7 @@ void ProtocolPageLoadMetricsObserver::OnFirstMeaningfulPaintInMainFrameDocument(
     case net::HttpResponseInfo::CONNECTION_INFO_QUIC_39:
     case net::HttpResponseInfo::CONNECTION_INFO_QUIC_40:
     case net::HttpResponseInfo::CONNECTION_INFO_QUIC_41:
+    case net::HttpResponseInfo::CONNECTION_INFO_QUIC_42:
       PAGE_LOAD_HISTOGRAM(
           "PageLoad.Clients.Protocol.QUIC.Experimental.PaintTiming."
           "NavigationToFirstMeaningfulPaint",
@@ -224,6 +227,7 @@ void ProtocolPageLoadMetricsObserver::OnDomContentLoadedEventStart(
     case net::HttpResponseInfo::CONNECTION_INFO_QUIC_39:
     case net::HttpResponseInfo::CONNECTION_INFO_QUIC_40:
     case net::HttpResponseInfo::CONNECTION_INFO_QUIC_41:
+    case net::HttpResponseInfo::CONNECTION_INFO_QUIC_42:
       PAGE_LOAD_HISTOGRAM(
           "PageLoad.Clients.Protocol.QUIC.DocumentTiming."
           "NavigationToDOMContentLoadedEventFired",
@@ -268,6 +272,7 @@ void ProtocolPageLoadMetricsObserver::OnLoadEventStart(
     case net::HttpResponseInfo::CONNECTION_INFO_QUIC_39:
     case net::HttpResponseInfo::CONNECTION_INFO_QUIC_40:
     case net::HttpResponseInfo::CONNECTION_INFO_QUIC_41:
+    case net::HttpResponseInfo::CONNECTION_INFO_QUIC_42:
       PAGE_LOAD_HISTOGRAM(
           "PageLoad.Clients.Protocol.QUIC.DocumentTiming."
           "NavigationToLoadEventFired",
