net/http/http_response_info.cc
@@ -446,6 +446,7 @@ bool HttpResponseInfo::DidUseQuic() const {
     case CONNECTION_INFO_QUIC_39:
     case CONNECTION_INFO_QUIC_40:
     case CONNECTION_INFO_QUIC_41:
+    case CONNECTION_INFO_QUIC_42:
       return true;
     case NUM_OF_CONNECTION_INFOS:
       NOTREACHED();
@@ -498,6 +499,8 @@ std::string HttpResponseInfo::ConnectionInfoToString(
       return "http/2+quic/40";
     case CONNECTION_INFO_QUIC_41:
       return "http/2+quic/41";
+    case CONNECTION_INFO_QUIC_42:
+      return "http/2+quic/42";
     case CONNECTION_INFO_HTTP0_9:
       return "http/0.9";
     case CONNECTION_INFO_HTTP1_0:
