net/quic/core/quic_version_manager.cc
@@ -10,7 +10,7 @@
 namespace net {
 
 QuicVersionManager::QuicVersionManager(QuicVersionVector supported_versions)
-    : enable_version_41_(GetQuicFlag(FLAGS_quic_enable_version_41)),
+    : enable_version_42_(GetQuicFlag(FLAGS_quic_enable_version_42)),
       enable_version_40_(FLAGS_quic_reloadable_flag_quic_enable_version_40),
       enable_version_39_(FLAGS_quic_reloadable_flag_quic_enable_version_39),
       enable_version_38_(FLAGS_quic_reloadable_flag_quic_enable_version_38),
@@ -26,11 +26,11 @@ const QuicVersionVector& QuicVersionManager::GetSupportedVersions() {
 }
 
 void QuicVersionManager::MaybeRefilterSupportedVersions() {
-  if (enable_version_41_ != GetQuicFlag(FLAGS_quic_enable_version_41) ||
+  if (enable_version_42_ != GetQuicFlag(FLAGS_quic_enable_version_42) ||
       enable_version_40_ != FLAGS_quic_reloadable_flag_quic_enable_version_40 ||
       enable_version_39_ != FLAGS_quic_reloadable_flag_quic_enable_version_39 ||
       enable_version_38_ != FLAGS_quic_reloadable_flag_quic_enable_version_38) {
-    enable_version_41_ = GetQuicFlag(FLAGS_quic_enable_version_41);
+    enable_version_42_ = GetQuicFlag(FLAGS_quic_enable_version_42);
     enable_version_40_ = FLAGS_quic_reloadable_flag_quic_enable_version_40;
     enable_version_39_ = FLAGS_quic_reloadable_flag_quic_enable_version_39;
     enable_version_38_ = FLAGS_quic_reloadable_flag_quic_enable_version_38;
