net/quic/core/quic_versions.cc
@@ -30,8 +30,8 @@ QuicVersionVector FilterSupportedVersions(QuicVersionVector versions) {
   QuicVersionVector filtered_versions(versions.size());
   filtered_versions.clear();  // Guaranteed by spec not to change capacity.
   for (QuicVersion version : versions) {
-    if (version == QUIC_VERSION_41) {
-      if (GetQuicFlag(FLAGS_quic_enable_version_41) &&
+    if (version == QUIC_VERSION_42) {
+      if (GetQuicFlag(FLAGS_quic_enable_version_42) &&
           FLAGS_quic_reloadable_flag_quic_enable_version_40 &&
           FLAGS_quic_reloadable_flag_quic_enable_version_39 &&
           FLAGS_quic_reloadable_flag_quic_enable_version_38) {
@@ -82,8 +82,8 @@ QuicTag QuicVersionToQuicTag(const QuicVersion version) {
       return MakeQuicTag('Q', '0', '3', '9');
     case QUIC_VERSION_40:
       return MakeQuicTag('Q', '0', '4', '0');
-    case QUIC_VERSION_41:
-      return MakeQuicTag('Q', '0', '4', '1');
+    case QUIC_VERSION_42:
+      return MakeQuicTag('Q', '0', '4', '2');
     default:
       // This shold be an ERROR because we should never attempt to convert an
       // invalid QuicVersion to be written to the wire.
@@ -115,7 +115,7 @@ string QuicVersionToString(const QuicVersion version) {
     RETURN_STRING_LITERAL(QUIC_VERSION_38);
     RETURN_STRING_LITERAL(QUIC_VERSION_39);
     RETURN_STRING_LITERAL(QUIC_VERSION_40);
-    RETURN_STRING_LITERAL(QUIC_VERSION_41);
+    RETURN_STRING_LITERAL(QUIC_VERSION_42);
     default:
       return "QUIC_VERSION_UNSUPPORTED";
   }
